--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- locals.title?title:'login' -%></title>
-    <link rel="stylesheet" href="/mp2/public/login.css">
+    <link rel="stylesheet" href="/public/login.css">
 </head>
 <body>
   <div class="form">
@@ -87,6 +87,6 @@
     
 </div> <!-- /form -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/mp2/public/login.js"></script>
+    <script src="/public/login.js"></script>
 </body>
 </html>
