--- a/public/main.css
+++ b/public/main.css
@@ -1,21 +1,273 @@
-/* styles.css */
-body {
-    font-family: Arial, sans-serif;
+.brand {
+    float: left;
+    margin-left: 40px;
+    margin-top: 30px;
+    font-family: sans-serif;
+    color: gold;
+}
+nav {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.158);
+}
+.brand-title {
+    display: inline-block;
+}
+
+.links-container {
+    float: left;
+    margin-left: 160px;
+    margin-top: -50px;
+}
+
+.signup-container {
+    float: right;
+    margin-right: 20px;
+    margin-top: -50px;
+}
+
+.links {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-family: sans-serif;
+    margin-left: 60px;
+}
+
+.links:hover {
+    border-bottom: 1px solid gold;
+}
+
+.search-container {
+    float: left;
+    width: 400px;
+    height: 45px;
+    border: 1px solid gold;
+    margin-left: 230px;
+    margin-top: 150px;
+    border-radius: 10px;
+}
+
+.location-container {
+    float: right;
+    width: 400px;
+    height: 45px;
+    border: 1px solid gold;
+    margin-top: 150px;
+    border-radius: 10px;
+    margin-right: 290px;
+}
+
+.find-button{
+    float: right;
+    height: 50px;
+    margin-top: -50px;
+    border-radius: 10px;
+    margin-right: 200px;
+    padding: 10px;
+    background: gold;
+    border: 1px solid gold;
+    color: white;
+    font-weight: bolder;
+}
+
+.find-button:hover {
+    background: rgba(255, 217, 0, 0.658);
+}
+
+.text {
+    float: left; 
+    margin-left: 500px;
+    margin-top: 50px;
+    font-family: sans-serif;
+}
+
+.post-link {
+    text-decoration: none;
+    color: gold;
+    font-weight: bold;
+}
+
+.post-link:hover {
+    color: rgba(255, 217, 0, 0.479);
+}
+
+.agencytitle-container {
+    float: right;
+    margin-right: 500px;
+    margin-top: 40px;
+    font-family: sans-serif;
+    color: gold;
+}
+
+.login-container {
+    border: solid 1.5px rgba(0, 0, 0, 0.212);
+    width: 450px;
+    height: 550px;
+    float: right;
+    margin-top: 130px;
+    margin-right: -370px;
+    border-radius: 10px;
+    box-shadow: 1px 2px 28px -7px rgba(0,0,0,0.75);
+}
+
+.login-header {
+    font-family: Arial;
+    margin-left: 20px;
+}
+
+.login-text {
+    font-family: Arial;
+    font-size: 15px;
+    margin-left: 20px;
+    color: rgba(0, 0, 0, 0.534);
+}
+
+.termsandconditions {
+    font-family: Helvetica;
+    font-size: 12px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: rgba(0, 0, 0, 0.534);
+}
+
+.google-container {
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 400px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.295);
+    border-radius: 10px;
+}
+
+.apple-container {
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 400px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.295);
+    border-radius: 10px;
+    margin-top: 15px;
+}
+
+.google-logo {
+    float: left;
+    margin-top: 7px;
+    margin-left: 10px;
+}
+
+.btn-google {
+    display: inline-block;
+    font-size: larger;
+    font-weight: bold;
+    margin-left: -40px;
+}
+.btn-apple {
+    display: inline-block;
+    font-size: larger;
+    font-weight: bold;
+    margin-left: -50px;
+}
+
+
+.google-container:hover {
+    border: 1px solid gold;
+    background: rgba(255, 217, 0, 0.171);
+    transition: 1.5s;
+}
+
+.apple-logo {
+    float: left;
+    margin-top: 3px;
+    margin-left: -10px;
+}
+
+.apple-container:hover {
+    border: 1px solid gold;
+    background: rgba(255, 217, 0, 0.171);
+    transition: 1.5s;
+}
+
+.line-br {
+   display: block;
+   text-align: center;
+   font-family: Verdana;
+   margin-top: 30px;
+   font-size: 15px;
+   color: rgba(0, 0, 0, 0.5);
+}
+
+.txt-email-add {
+    display: block;
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 10px;
+    font-family: Verdana;
+    font-weight: bold;
+}
+
+.email-add-cont {
+    width: 390px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+.email-input {
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 0.5px solid rgba(0, 0, 0, 0.007);
+    margin-top: 15px;
+}
+
+.email-add-cont:hover {
+    border: 2px solid gold;
+    box-shadow: 5px 5px 0px 0px rgba(255,215,0,0.4);
+}
+
+.continue-container {
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 400px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.295);
+    border-radius: 10px;
+    margin-top: 15px;
+    background: rgba(255, 217, 0, 0.637);
+}
+
+.btn-continue {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: sans-serif;
+    display: block;
     text-align: center;
-    margin: 20px;
+    margin-top: 15px;
+    font-weight: bold;
 }
 
-h1 {
-    color: #333;
-}
-
-form {
-    margin: 20px auto;
-    max-width: 400px;
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 1%;
+    font-family: Arial;
+    font-size: 17px;
+  }
+  
+  #myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 50%; 
+    min-height: 50%;
+  }
+  
+  .content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-}
-
-/* ... Rest of your CSS styles ... */
+  }
