--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,90 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%- locals.title?title:'login' -%></title>
-    <link rel="stylesheet" href="/public/login.css">
+    <title><%- locals.title?title:'Login Page' -%></title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="form">
-      
-    <ul class="tab-group">
-      <li class="tab active"><a href="#signup">Sign Up</a></li>
-      <li class="tab"><a href="#login">Log In</a></li>
-    </ul>
-    
-    <div class="tab-content">
-      <div id="signup">   
-        <h1>Sign Up for Free</h1>
-        
-        <form action="/" method="post">
-        
-        <div class="top-row">
-          <div class="field-wrap">
-            <label>
-              First Name<span class="req">*</span>
-            </label>
-            <input type="text" required autocomplete="off" />
-          </div>
-      
-          <div class="field-wrap">
-            <label>
-              Last Name<span class="req">*</span>
-            </label>
-            <input type="text"required autocomplete="off"/>
-          </div>
+        <div class="agencytitle-container">
+            <h2 class="agency-title">Trio Outsourcing Services</h2>
         </div>
-
-        <div class="field-wrap">
-          <label>
-            Email Address<span class="req">*</span>
-          </label>
-          <input type="email"required autocomplete="off"/>
+        <div class="login-container">
+            <h2 class="login-header">Ready to take the next step?</h2>
+            <p class="login-text">Create an account or sign in.</p>
+            <p class="termsandconditions">By creating an account or logging in, you understand and agree to T.O.S.'s Terms. You also acknowledge our Cookie and Privacy policies. You will receive marketing messages from T. O. S. and may opt out at any time by following the unsubscribe link in our messages, or as detailed in our terms.</p>
+            <button class="google-container">
+                <a href="#">
+                <img class="google-logo" src="images/google.png" width="30px" alt="Error">
+                <p class="btn-google">Continue with Google</p>
+                </a>
+            </button>
+            <button class="apple-container">
+                <a href="#">
+                <img class="apple-logo" src="images/apple.png" width="65px" alt="Error">
+                <p class="btn-apple">Continue with Apple</p>
+                </a>
+            </button>
+            <div class="line-br">or</div>
+            <div class="txt-email-add">Email address</div>
+            <div class="email-input">
+            <input class="email-add-cont" type="email">
+            </div>
+            <div class="continue-container">
+            <a class="btn-continue" href="">Continue</a>
+            </div>
         </div>
-        
-        <div class="field-wrap">
-          <label>
-            Set A Password<span class="req">*</span>
-          </label>
-          <input type="password"required autocomplete="off"/>
-        </div>
-        
-        <button type="submit" class="button button-block"/>Get Started</button>
-        
-        </form>
-
-      </div>
-      
-      <div id="login">   
-        <h1>Welcome Back!</h1>
-        
-        <form action="/" method="post">
-        
-          <div class="field-wrap">
-          <label>
-            Email Address<span class="req">*</span>
-          </label>
-          <input type="email"required autocomplete="off"/>
-        </div>
-        
-        <div class="field-wrap">
-          <label>
-            Password<span class="req">*</span>
-          </label>
-          <input type="password"required autocomplete="off"/>
-        </div>
-        
-        <p class="forgot"><a href="#">Forgot Password?</a></p>
-        
-        <button class="button button-block"/>Log In</button>
-        
-        </form>
-
-      </div>
-      
-    </div><!-- tab-content -->
-    
-</div> <!-- /form -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/public/login.js"></script>
 </body>
 </html>
