--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,22 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%- locals.title?title:'TOS-Job Posting and Management' -%></title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <title><%- locals.title?title:'T.O.S Main Page' -%></title>
+    <link rel="icon" href="/static/assets/tos logo.png">
+    <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/signup">Signup</a></li>
-        </ul>
+        <div class="brand-container">
+            <h1 class="brand">T. O. S.</h1>
+            <a href="index.html"><img class="brand-title" src="/static/assets/tos logo.png" width="80px" alt="Error"></a>
+        </div>
+
+        <div class="links-container">
+            <a class="links" href="findjobs.html">Find Jobs</a>
+            <a class="links" href="companyreviews.html">Company Reviews</a>
+            <a class="links" href="findsalaries.html">Find Salaries</a>
+        </div>
+
+        <div class="signup-container">
+            <a class="links" href="/static/login.ejs">Log In/Sign In</a>
+            <a class="links" href="employers.html">Employers/Job Post</a>
+        </div>
     </nav>
-    <header>
-        <h1>Trio Outsourcing Services</h1>
-    </header>
+
     <main>
-        <!-- Job search form and results go here -->
+        <div class="jobsearch-container">
+        <input class="search-container" type="text" placeholder="Jobtitle, keywords, or company">
+        </div>
+        <div class="locationsearch-container">
+        <input class="location-container" type="text" placeholder="City, province or POEA">
+        </div>
+        <div>
+            <!-- <button class="find-button">Find Jobs</button> -->
+            <button id="find-jobs-button" class="find-button">Find Jobs</button>
+
+        </div>
+        <div class="text">
+            <a class="post-link" href="/static/login.ejs"> Post your resume</a> - It only takes a few seconds
+        </div>
     </main>
+
+   
+    <!-- Your custom JavaScript code goes here -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        const findJobsButton = document.querySelector('.find-button');
+    
+        findJobsButton.addEventListener('click', function() {
+            // Display an alert when the button is clicked
+            alert('You clicked the "Find Jobs" button!');
+        });
+    </script>
+    
+  <script src="/static/main.js"></script>
+
+
+    
 </body>
 </html>
+
+
