--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
         </div>
 
         <div class="signup-container">
-            <a class="links" href="/">Log In/Sign In</a>
+            <a class="links" href="/login">Log In/Sign In</a>
             <a class="links" href="employers.html">Employers/Job Post</a>
         </div>
     </nav>
