--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= locals.title ? locals.title : 'T.O.S Main Page' %></title>
+    <title><%= locals.title ? locals.title : 'T.O.S Dashboard' %></title>
     <link rel="icon" href="/static/assets/logo.png">
     <link rel="stylesheet" href="/static/main.css">
 </head>
