--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,6 @@
     <title><%= locals.title ? locals.title : 'Login Page' %></title>
     <link rel="icon" href="/static/assets/logo.png">
     <link rel="stylesheet" href="/static/login/login.css">
-
-   
 </head>
 <body>
     <div class="agencytitle-container">
@@ -37,72 +35,47 @@
                 <label for="email">
                     Email Address<span class="req">*</span>
                 </label>
-                <input type="email" id="email" name="email" required autocomplete="off"/>
+                <form action="/login" method="POST">
+                    <div class="form-group">
+                        <input type="email" placeholder="email" class="form-control" value="tos@test.com" name="email">
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <input type="password" placeholder="password" class="form-control" value="Tos1234" name="password">
+                    </div>
+                    <br>
+                     <button type="submit" class="btn btn-success rounded-pill">Continue</button>
+                   
+                </form>
+                <br>
+                 <% if(locals.errors) {%>
+                        <div class="alert alert-danger text-center">
+                            <%= errors%>
+                        </div>
+                    <%}%>
+                     <% if(locals.isInvalid) {%>
+                        <div class="alert alert-danger text-center">
+                            <%= isInvalid%>
+                        </div>
+                    <%}%>
+                     <% if(locals.logout) {%>
+                        <div class="alert alert-success text-center">
+                            <%= logout%>
+                        </div>
+                    <%}%>
+                  </div>
             </div>
-            <div class="field-wrap">
-                <label for="password">
-                    Password<span class="req">*</span>
-                </label>
-                <input type="password" id="password" name="password" required autocomplete="off"/>
-            </div>
-
-
-
-            <ul class="tab-group">
-                <a href="/static/login.ejs">
-                    <button class="button button-block" type="button">Log In</button>
-                </a>
-            </ul>
-
-            <a href="#" class="forgot" onclick="showConfirmationDialog()">Forgot Password?</a>
-
-        </form>
+        
         <!-- End Login Form -->
-
-        <!-- Sign Up Area -->
-        <ul class="tab-group">
-            <a href="/static/signup.ejs">
-                <button class="button button-block" type="button">Sign Up</button>
-            </a>
-        </ul>
-        <!-- End Sign Up Area -->
     </div>
 
-     <!-- Add jQuery and jQuery Mobile -->
-     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-     <script>
-        $(document).on("pagecreate", function () {
-            $("#login-button").on("click", function (event) {
-                event.preventDefault(); // Prevent the form from submitting
-                const email = $("#email").val();
-                const password = $("#password").val();
-
-                if (email && password) {
-                    // Fields are filled, proceed with login logic
-                    alert("Login successful!");
-                    // You can also submit the form here if needed
-                    // $("#login-form").submit();
-                } else {
-                    // Fields are not filled, show an error message
-                    alert("Please fill out all required fields.");
-                }
-            });
-        });
-
-        function showConfirmationDialog() {
-            const confirmed = confirm('Do you want to continue?');
-
-            if (confirmed) {
-                // User clicked "OK" (Yes)
-                alert('T.O.S Ready to Serve!');
-            } else {
-                // User clicked "Cancel" (No)
-                alert('You canceled the action.');
-            }
-        }
-    </script>
+    <script src="/static/login/login.js"></script>
 </body>
 </html>
+
+    
+
+
+
+
+   
