--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,52 +30,45 @@
         <div class="line-br">or</div>
 
         <!-- Login Form -->
-        <form id="login-form" action="/" method="post">
+        <form id="login-form" action="/login" method="post">
             <div class="field-wrap">
                 <label for="email">
                     Email Address<span class="req">*</span>
                 </label>
-                <form action="/login" method="POST">
-                    <div class="form-group">
-                        <input type="email" placeholder="email" class="form-control" value="tos@test.com" name="email">
-                    </div>
-                    <br>
-                    <div class="form-group">
-                        <input type="password" placeholder="password" class="form-control" value="Tos1234" name="password">
-                    </div>
-                    <br>
-                     <button type="submit" class="btn btn-success rounded-pill">Continue</button>
-                   
-                </form>
-                <br>
-                 <% if(locals.errors) {%>
-                        <div class="alert alert-danger text-center">
-                            <%= errors%>
-                        </div>
-                    <%}%>
-                     <% if(locals.isInvalid) {%>
-                        <div class="alert alert-danger text-center">
-                            <%= isInvalid%>
-                        </div>
-                    <%}%>
-                     <% if(locals.logout) {%>
-                        <div class="alert alert-success text-center">
-                            <%= logout%>
-                        </div>
-                    <%}%>
-                  </div>
+                <div class="form-group">
+                    <input type="email" placeholder="email" class="form-control" value="Tos@test.com" name="email">
+                </div>
             </div>
-        
+            <div class="field-wrap">
+                <label for="password">
+                    Password<span class="req">*</span>
+                </label>
+                <div class="form-group">
+                    <input type="password" placeholder="password" class="form-control" value="Tos12345" name="password">
+                </div>
+            </div>
+            <div class="field-wrap">
+                <button type="submit" class="btn btn-success rounded-pill">Continue</button>
+            </div>
+        </form>
         <!-- End Login Form -->
+        <% if (locals.errors) { %>
+            <div class="alert alert-danger text-center">
+                <%= locals.errors %>
+            </div>
+        <% } %>
+        <% if (locals.isInvalid) { %>
+            <div class="alert alert-danger text-center">
+                <%= locals.isInvalid %>
+            </div>
+        <% } %>
+        <% if (locals.logout) { %>
+            <div class="alert alert-success text-center">
+                <%= locals.logout %>
+            </div>
+        <% } %>
     </div>
 
     <script src="/static/login/login.js"></script>
 </body>
 </html>
-
-    
-
-
-
-
-   
